# DolRecomp

./: .all-contributorsrc  .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS.md  README.md
.github/workflows/: cmake-single-platform.yml
docs/: README.md
include/: README.md
scripts/: README.md  compare_cpu_references.ps1  run_dolphin_reference.ps1
src/: main.c
src/app/: cli.c
src/backend/: README.md  dispatch.c  emitter.c  emitter.h
src/core/: README.md  cpu.c  cpu.h
src/cpu/: cpu.c  cpu.h
src/frontend/: README.md  decoder.c  decoder.h  disc_extract.c  disc_extract.h  dol.c  rpx.c  rpx.h
src/runtime/: README.md
tests/: cross_check.s  test_codegen_emit.c  test_cross_check.c  test_disc_extract.c  test_dispatch.c  test_dol.c  test_jumptables.c  test_opcodes.c  test_pc_reference.c  test_rpx.c
tests/cmake/: codegen_compile.cmake
tests/dolphin/: Makefile
tests/dolphin/source/: main.c
tools/: README.md
